# VPN_ANDROID1

./: ANDROID_VPN_SETUP_GUIDE.md  APP_ARCHITECTURE_OVERVIEW.md  CONTENT.md  PLAY_STORE_READY.md  PRODUCTION_VPN_IMPLEMENTATION.md  PROXY_README.md  README.md  README_KILL_SWITCH.md  REAL_VPN_IMPLEMENTATION.md  SPEED_TEST_INTEGRATION_SUMMARY.md  THEME_UPDATE_SUMMARY.md  VPN_API_SETUP.md  VPN_SETUP_COMPLETE.md  build-android.ps1  build.gradle.kts  gradle.properties  settings.gradle.kts  sh-agent  Set-Service -StartupType Automatic  test-desktop-api.ps1  test-network.ps1
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: random_forest_vpn_ids_model.pkl  (+3 more)
app/src/main/cpp/: CMakeLists.txt  wireguard-go.c  wireguard_go_jni.cpp
backend/: .env  BACKEND_SETUP_GUIDE.md  COMPATIBILITY_REPORT.md  README.md  README_SIGNUP.md  SIGNUP_SETUP.md  SOLUTION_SUMMARY.md  SPEEDTEST_EXAMPLES.md  TESTING.md  build.gradle.kts  deploy-production.ps1  derive-keys.kt  derive-wireguard-keys.kt  download-gradle-wrapper.ps1  env.txt  gradlew.bat  start_backend.bat  start_backend.ps1  test-endpoints.ps1  test_api.html  test_api.kt  test_signup.kt
backend/server-configs/: generate-keys.sh  vpn-servers.conf
gradle/: libs.versions.toml
server-configs/: ANDROID_APP_FIXED.md  IMMEDIATE_FIX.md  IMPLEMENTATION_GUIDE.md  README.md  derive-keys.sh  osaka-wg0.conf  paris-wg0.conf  setup-server.sh  verify-setup.sh
speedtest-backend/: README.md  deploy.sh  ec2-setup.md  main.py  nginx.conf  requirements.txt  speedtest.service  test_endpoints.py
(+171 files in other folders)
